--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "smarteramail",
-  "version": "2.2.0",
-  "license": "MIT",
-  "main": "main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/duongnhn1996/AngularJS.git"
-  },
-  "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
-  },
+
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
@@ -19,7 +9,7 @@
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
     "lint": "ng lint",
-    "lint:fix": "ng lint smartera --fix",
+    "lint:fix": "ng lint ngx-admin-demo --fix",
     "lint:styles": "stylelint ./src/**/*.scss",
     "lint:ci": "npm run lint && npm run lint:styles",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -28,16 +18,15 @@
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-
+    "deploy": "git push origin master && git push heroku master"
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular-devkit/build-optimizer": "^0.6.8",
     "@angular/animations": "6.0.0",
     "@angular/common": "6.0.0",
     "@angular/compiler": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
-    "@angular/core": "6.0.0",
+    "@angular/core": "^6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "6.0.0",
     "@angular/platform-browser": "6.0.0",
@@ -48,12 +37,18 @@
     "@nebular/security": "^2.0.0-rc.8",
     "@nebular/theme": "^2.0.0-rc.8",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
+    "@swimlane/ngx-charts": "7.0.1",
     "angular-block-ui": "^0.2.2",
+    "angular2-chartjs": "0.4.1",
+    "angular2-froala-wysiwyg": "^2.6.0",
     "angular2-toaster": "^4.0.1",
     "angular5-recaptcha": "0.0.2",
     "bootstrap": "4.0.0",
+    "chart.js": "2.7.1",
+    "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "echarts": "^4.0.2",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -63,12 +58,13 @@
     "ng-block-ui": "^1.0.4",
     "ng-recaptcha": "^3.0.5",
     "ng2-ckeditor": "^1.2.1",
-    "ng2-cookies": "^1.0.12",
     "ng2-smart-table": "1.2.2",
+    "ng2-tree": "2.0.0-rc.4",
+    "ngx-echarts": "2.0.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
-    "rxjs": "^6.1.0",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.1.0",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
@@ -91,7 +87,6 @@
     "@types/node": "6.0.90",
     "codelyzer": "4.0.2",
     "conventional-changelog-cli": "1.3.4",
-    "electron": "^2.0.3",
     "http-proxy-middleware": "^0.18.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
